--- a/Airnb.ipynb
+++ b/Airnb.ipynb
@@ -584,9 +584,9 @@
       "<>:2: SyntaxWarning: invalid escape sequence '\\$'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\$'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\$'\n",
-      "C:\\Users\\akash\\AppData\\Local\\Temp\\ipykernel_29076\\270345741.py:1: SyntaxWarning: invalid escape sequence '\\$'\n",
+      "C:\\Users\\sarthak\\AppData\\Local\\Temp\\ipykernel_29076\\270345741.py:1: SyntaxWarning: invalid escape sequence '\\$'\n",
       "  ds['price'] = ds['price'].replace('[\\$,]', '', regex =True).astype(float)\n",
-      "C:\\Users\\akash\\AppData\\Local\\Temp\\ipykernel_29076\\270345741.py:2: SyntaxWarning: invalid escape sequence '\\$'\n",
+      "C:\\Users\\sarthak\\AppData\\Local\\Temp\\ipykernel_29076\\270345741.py:2: SyntaxWarning: invalid escape sequence '\\$'\n",
       "  ds['service fee'] = ds['service fee'].replace('[\\$,]', '', regex = True).astype(float)\n"
      ]
     }
